gke-opencensus-stackdriver/go/istio-integration/oc-istio-dep.yaml
#Copyright 2019 Google LLC
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#https://www.apache.org/licenses/LICENSE-2.0
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc-istio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oc-istio
  template:
    metadata:
      labels:
        app: oc-istio
    spec:
      containers:
      - name: oc-istio
        image: gcr.io/ygrinshteyn-sandbox/oc-istio:latest
        ports:
        - containerPort: 8080
